--- a/src/assets/video/video.html
+++ b/src/assets/video/video.html
@@ -24,12 +24,16 @@
 	<script>
 		var SLynx = new Skylynx();
 		var slyReady = false;
+		var currentStream = "";
 		function successCallback() {
 			slyReady = true;
 			iosAlert( "ready" );
 		}
 		function errorCallback(err) {
 			console.error('error: ' + err)
+			if( err.startsWith( "Already watching" ) ){
+				setTimeout( playVideo, 200, currentStream );
+			}
 		}
 		function startedCallback(type){
 			if( type == "video" ){
@@ -74,6 +78,7 @@
 		
 		function playVideo( stream ) {
 			iosAlert('play');
+			currentStream = stream;
 			if( slyReady ){
 				SLynx.stop();
 				SLynx.start(stream,'');
